--- a/Demos/index.html
+++ b/Demos/index.html
@@ -127,7 +127,7 @@ h1
 </style>
 
 
-<script type="text/javascript" src="moo_core_1.3.js"></script>
+<script type="text/javascript" src="core_1_3_1.js"></script>
 <script type="text/javascript" src="../Source/GeoSuggester.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
@@ -140,12 +140,13 @@ var geo;
 window.addEvent('domready', function()
 {
 	geo = new GeoSuggester({
-		inputItem: document.id('city'),
+		inputItem: 'city',
 		container: 'GeoSuggesterContainer',
 		initText: "Please, provide a street address",
 		rollHeight: '400',
-		baloonMsg: 'Right location?<br/>press enter!',
+		baloonMsg: '<p>Right location?</p><p>press enter!</p>',
 		customClass: '_map_canvas',
+		delay:1000,
 		onSelect: function()
 		{
 			document.id('postalCode').set('value',geo.getPostalCode());
@@ -157,7 +158,8 @@ window.addEvent('domready', function()
 		},
 		onClear: function()
 		{
-			$$('.geoInput').set('value','');
+			document.id('city').set('value',''); 
+			$$('.geoInput').set('value', '');
 		}
 		
 	});
